# grad-paddy

./: .gitignore  Makefile  README.md
backend/: .dockerignore  .env.example  .gitignore  AGENTS.md  API_DOCUMENTATION.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
backend/core/: config.py
backend/src/: config.py  main.py
backend/src/agents/: __init__.py  app.py  callbacks.py  chains.py  context.py  elastic_mcp.py  memory_tools.py  root.py  run_registry.py  schemas.py  subagents.py  tools.py
backend/src/agents/domain/: __init__.py  chains.py  orchestrator.py  subagents.py
backend/src/agents/internal/: __init__.py  agent.py
backend/src/api/: __init__.py  chat.py  cvs.py  drafts.py  emails.py  groups.py  hitl.py  hitl_events.py  integrations.py  memory.py  sessions.py  shortlist.py  tracker.py  users.py
backend/src/api/schemas/: requests.py  responses.py
backend/src/core/: config.py  firebase.py  firestore.py
backend/src/integrations/: google_client.py
backend/src/repositories/: __init__.py  base.py  cvs_repo.py  drafts_repo.py  elastic_repo.py  emails_repo.py  groups_repo.py  hitl_repo.py  ingestion_repo.py  integrations_repo.py  sessions_repo.py  shortlist_repo.py  tracker_repo.py  users_repo.py
backend/src/scraper/: README.md  faculty_query.py  faculty_urls.txt  program_urls.txt  query.py  requirements.txt  scrapy.cfg  setup.py
backend/src/scraper/grad_scraper/: middlewares.py  settings.py
backend/src/scraper/grad_scraper/items/: faculty_profile.py  grad_program.py
backend/src/scraper/grad_scraper/pipelines/: cleaning.py  collector.py  (+3 more)
backend/src/scraper/output/: scraped_items.jsonl
backend/src/services/: __init__.py  calendar_service.py  cvs_service.py  drafts_service.py  emails_service.py  faculty_service.py  firestore_adk_session.py  groups_service.py  hitl_service.py  ingestion_service.py  integrations_service.py  memory_service.py  sessions_service.py  shortlist_service.py  tracker_service.py  users_service.py
backend/tests/: test_faculty.py  test_faculty_service.py  test_hitl_persistence.py  test_ingestion.py  test_security_guardrails.py
(+67 files in other folders)
