[project]
name = "backend"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "ag-ui-adk>=0.6.3",
    "fastapi[standard]>=0.136.1",
    "firebase-admin>=7.4.0",
    "google-adk>=1.34.0",
    "google-cloud-firestore>=2.27.0",
    "google-genai>=1.72.0,<2.0.0",
    "uuid6>=2025.0.1",
]

[tool.pyright]
extraPaths = ["."]
