[project]
name = "backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "ag-ui-adk>=0.6.3",
    "fastapi[standard]>=0.136.1",
    "firebase-admin>=7.4.0",
    "google-adk>=1.34.0",
    "google-cloud-firestore>=2.27.0",
    "google-genai>=1.72.0,<2.0.0",
    "uuid6>=2025.0.1",
    "elasticsearch[async]>=8.0.0",
    "fake-useragent>=1.4.0",
    "google-cloud-aiplatform>=1.154.0",
    "langchain>=0.1.0",
    "langchain-text-splitters>=0.0.1",
    "numpy>=1.24.0",
    "pdfplumber>=0.10.0",
    "playwright>=1.40.0",
    "python-dotenv>=1.0.0",
    "scrapy>=2.11.0",
    "scrapy-playwright>=0.0.34",
    "scholarly>=1.7.11",
    "httpx>=0.28.1",
    "pytest-asyncio>=1.4.0",
]

[tool.pyright]
extraPaths = ["."]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "module"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.4.0",
]